<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.EventDetailFragment">

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="25dp"
        android:textColor="#24A0ED"
        android:textStyle="bold"
        android:textSize= "20sp"
        android:text="Título"/>

    <TextView
        android:id="@+id/tv_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#000000"
        android:textStyle="italic"
        android:textSize= "16sp"
        android:text="Quem estará presente: -"/>

    <TextView
        android:id="@+id/tv_checkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toBottomOf="@id/tv_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize= "16sp"
        android:text="Preencha seus dados para fazer o check-in:"/>

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="25dp"
        android:paddingLeft="15dp"
        android:hint="Nome"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/layout_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_checkin" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="25dp"
        android:paddingLeft="15dp"
        android:hint="Email"
        android:inputType="textWebEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/layout_bg"
        app:layout_constraintTop_toBottomOf="@id/et_nome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_checkin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="Fazer check in"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="#d3d3d3"
        android:enabled="false"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_checkin" />


</androidx.constraintlayout.widget.ConstraintLayout>